# video-depth-anything

./: .gitignore  dataset.py  distillation.py  distillation_transformers.py  eval_rewrite.py  evaluate.py  pyproject.toml  run.py
datasets/: base.py  diode.py  image_hdf5.py  kitti.py  point_odessey.py
experiments/: distillation.py  distillation_args.py  distillation_new.py  evaluate_diode.py  evaluate_kitti.py  evaluate_pointodessey.py
scripts/: distill.sh  distill_augmentations.sh  distill_augmentations_lr.sh  distill_lr.sh  download_diode.sh  download_kitti.sh  download_nyuv2.sh  download_pointodessey.sh  download_proc-depth-eval.sh  download_vkitti2.sh  get_weights.sh  get_weights_vda.sh  multipart_download
utils/: util.py
video_depth_anything/: dpt.py  dpt_temporal.py  video_depth.py
